--- a/Cafeteria/angular.json
+++ b/Cafeteria/angular.json
@@ -102,6 +102,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
